--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,14 +1,20 @@
 container_commands:
-    01_migrate:
+    01_mkvirtualenv:
+        command: "workon fastube"
+    02_pipinstall:
+        command: "pip install -r requirements/production.txt"
+    03_settings:
+        command: "export DJANGO_SETTINGS_MODULE=fastube.settings.production"
+    04_migrate:
         command: "python fastube/manage.py migrate"
-    02_collectstatic:
+    05_collectstatic:
         command: "python fastube/manage.py collectstatic --noinput"
-    03_createsu:
-        command: "python manage.py creatsu"
+    06_createsu:
+        command: "python fastube/manage.py creatsu"
         leader_only: true
-    04_chmod_sqllite:
+    07_chmod_sqllite:
         command: "chmod 666 db.sqlite3"
 
 option_settings:
     aws:elasticbeanstalk:container:python:
-        WSGIPath: fastube/fastube/wsgi.py
+        WSGIPath: fastube/wsgi.py
