refactor nginx default server_name: aws EIP IP 52.78.62.5

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -44,7 +44,7 @@ http {
 
     server {
         listen       80;
-        server_name  localhost;
+        server_name  52.78.62.5;
         root         /usr/share/nginx/html;
 
         #charset koi8-r;
