--- a/appspec.yml
+++ b/appspec.yml
@@ -16,7 +16,7 @@ hooks:
   AfterInstall:
     - location: scripts/install_python_dependencies.sh
       timeout: 6000
-      runas: root
+      runas: ec2-user
     - location: scripts/migrate.sh
       timeout: 6000
       runas: ec2-user
