--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -40,12 +40,12 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
-    index   index.html index.htm;
+    #index   index.html index.htm;
 
     server {
         listen       80;
         server_name  52.78.62.5;
-        root         /usr/share/nginx/html;
+        #root         /usr/share/nginx/html;
 
         #charset koi8-r;
 
