--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -20,7 +20,7 @@ server {
     }
 
     location / {
-        proxy_pass          http://app_server/;
+        proxy_pass          http://52.78.62.5/;
         proxy_redirect      off;
         proxy_set_header    Host            $host;
         proxy_set_header    X-Real-IP       $remote_addr;
